edit yaml file and add mock data as well as elastic search client
